--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a6d5a6">  <td>24/07/02 22:59:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.pageSetUp()[pri:0, instance:com.SwagLabs.Testcases.OverviewPageTest@223d2c72]">&gt;&gt;pageSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@275266973</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/07/02 22:59:18</td>   <td>-5104</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpBrowser()[pri:0, instance:com.SwagLabs.Testcases.OverviewPageTest@223d2c72]">&gt;&gt;setUpBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@275266973</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/07/02 23:00:08</td>   <td>44431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverviewPageTest.verifyOverview()[pri:2, instance:com.SwagLabs.Testcases.OverviewPageTest@223d2c72]">verifyOverview</td> 
-  <td>main@275266973</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/07/02 23:00:07</td>   <td>44044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverviewPageTest.verifySummary()[pri:1, instance:com.SwagLabs.Testcases.OverviewPageTest@223d2c72]">verifySummary</td> 
-  <td>main@275266973</td>   <td></td> </tr>
+<tr bgcolor="907483">  <td>24/07/03 12:13:06</td>   <td>0</td> <td title="&lt;&lt;BaseClass.exitReport()[pri:0, instance:com.SwagLabs.Testcases.OverviewPageTest@59662a0b]">&lt;&lt;exitReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@522553046</td>   <td></td> </tr>
+<tr bgcolor="907483">  <td>24/07/03 12:12:38</td>   <td>-27948</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.pageSetUp()[pri:0, instance:com.SwagLabs.Testcases.OverviewPageTest@59662a0b]">&gt;&gt;pageSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@522553046</td>   <td></td> </tr>
+<tr bgcolor="907483">  <td>24/07/03 12:12:35</td>   <td>-31259</td> <td title="&gt;&gt;BaseClass.reports()[pri:0, instance:com.SwagLabs.Testcases.OverviewPageTest@59662a0b]">&gt;&gt;reports</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@522553046</td>   <td></td> </tr>
+<tr bgcolor="907483">  <td>24/07/03 12:12:36</td>   <td>-30916</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUpBrowser()[pri:0, instance:com.SwagLabs.Testcases.OverviewPageTest@59662a0b]">&gt;&gt;setUpBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@522553046</td>   <td></td> </tr>
+<tr bgcolor="907483">  <td>24/07/03 12:13:06</td>   <td>-389</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.SwagLabs.Testcases.OverviewPageTest@59662a0b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@522553046</td>   <td></td> </tr>
+<tr bgcolor="ce6090">  <td>24/07/03 12:13:04</td>   <td>-2621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverviewPageTest.verifyOverview()[pri:2, instance:com.SwagLabs.Testcases.OverviewPageTest@59662a0b]">verifyOverview</td> 
+  <td>main@522553046</td>   <td></td> </tr>
+<tr bgcolor="ce6090">  <td>24/07/03 12:13:02</td>   <td>-4885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OverviewPageTest.verifySummary()[pri:1, instance:com.SwagLabs.Testcases.OverviewPageTest@59662a0b]">verifySummary</td> 
+  <td>main@522553046</td>   <td></td> </tr>
 </table>
