--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,5 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Log:Driver session is created</td></tr>
+<tr><td>Log:Application is opened</td></tr>
+<tr><td>Log:Login page is opened</td></tr>
+<tr><td>Log:Login is completed with valid data set</td></tr>
+</table>
